syntax = "proto3";

option csharp_namespace = "Epam.Demo.App.ConsoleClient";

package User;

service User {
  rpc SaveInfo (UserRequest) returns (UserReply);
}

message UserRequest {
  string fullname = 1;
}

// The response message containing the greetings.
message UserReply {
  string status = 1;
}
